correct panels lined up, and cropped correctly bc replaced 'body' with '.software'

--- a/responsive/responsive.css
+++ b/responsive/responsive.css
@@ -1,65 +1,51 @@
-/*Responsive style sheet*/
+/*********************
+Esther Tzau
+COMP20
+Lab 4
+Responsive style sheet
+**********************/
 
-
-/*.software{
-	background-image: url("software.png");
-	background-repeat: no-repeat;
-}*/
 
 /* Airplane Safety - Top-left*/
-body{
-	/*position: absolute;
-	background-image: url("software.png");
-	clip: rect(0px, 602px, 605px, 0px);	
-	width: 605.5px;
-	height: 602px;
-	background-size:300%;
-*/
-	background: url("software.png");
-	background-position: 0px 0px;
-	width: 30px;
-	height: 400px;
+.software{
+	background: url("software.png") 0 0;
+	width: 440px;
+	height: 590px;
 }
 
 /*Elevator Safety - Top middle*/
 @media screen and (min-width: 1000px) and (max-width: 1200px) {
-	body{
-		background: url("software.png");
-		background-position: 770px 0px;
-		width: 100px;
-		height: 400px;
+	.software{
+		background: url("software.png") 770px 0px;
+		width: 440px;
+		height: 590px;
 	}
 }
 
 /*Computerized Voting - top right*/
 @media screen and (min-width: 800px) and (max-width: 1000px){
-	body{
-		background: url("software.png");
-		background-position: 340px 0px;
-		width: 30px;
-		height: 400px;
+	.software{
+		background: url("software.png") 330px 0px;
+		width: 330px;
+		height: 590px;
 	}
 }
 
-
 /* Wait, Really? - bottom left*/
 @media only screen and (min-width: 600px) and (max-width: 800px) {
-	body{
-		background: url("software.png");
-		background-position: 0px 617px;
-		width: 590px;
-		height: 600px;
-		/*background-size:100%;*/
+	.software{
+		background: url("software.png") 0 617px;
+		width: 720px;
+		height: 620px;
 	}
 }
 
 /* Blockchain - bottom-right */
 @media only screen and (min-width: 0px) and (max-width: 600px) {
-	body{
-		background: url("software.png");
-		background-position: 480px 620px;
-		width: 30px;
-		height: 400px;
+	.software{
+		background: url("software.png") 480px 620px;
+		width: 480px;
+		height: 620px;
 	}
 }
 
